# mahalaxmi

./: CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_plugin.md
.github/workflows/: cla.yml
crates/mahalaxmi-cli/: README.md
crates/mahalaxmi-core/: Cargo.toml  README.md
crates/mahalaxmi-detection/: README.md
crates/mahalaxmi-indexing/: README.md
crates/mahalaxmi-orchestration/: Cargo.toml  README.md
crates/mahalaxmi-orchestration/src/: agent.rs  carry_forward.rs  circuit_breaker.rs  classifier.rs  dag.rs  diff_scan.rs  error.rs  input_adapter.rs  lib.rs  monitor.rs  output_format.rs  plan_hash.rs  queue.rs  service.rs  state_machine.rs  verification.rs  worktree.rs
crates/mahalaxmi-orchestration/src/consensus/: arbitrator.rs  complexity.rs  engine.rs  intersection.rs  mod.rs  normalizer.rs  similarity.rs  strategy.rs  union.rs  weighted.rs
crates/mahalaxmi-orchestration/src/context/: budget.rs  builder.rs  chunker.rs  graph_proximity.rs  historical.rs  lexical.rs  mod.rs  relevance.rs  router.rs
crates/mahalaxmi-orchestration/src/deliberation/: api_client.rs  cross_team.rs  discovery.rs  gate.rs  mod.rs  team.rs
crates/mahalaxmi-orchestration/src/models/: consensus.rs  events.rs  mod.rs  plan.rs  proposal.rs  queue.rs  report.rs  review.rs  validation.rs  worker.rs
crates/mahalaxmi-orchestration/src/modes/: mod.rs  precise.rs  review.rs
crates/mahalaxmi-orchestration/src/prompt/: builder.rs  mod.rs  normalizer.rs  parser.rs  review_builder.rs  validator_builder.rs  worker_builder.rs
crates/mahalaxmi-orchestration/tests/: agent_tests.rs  consensus_tests.rs  context_budget_tests.rs  context_builder_tests.rs  context_chunker_tests.rs  context_degradation_tests.rs  context_queue_tests.rs  context_relevance_tests.rs  converter_tests.rs  dag_tests.rs  legal_domain_tests.rs  models_tests.rs  monitor_tests.rs  prompt_tests.rs  queue_tests.rs  queue_verification_tests.rs  report_tests.rs  review_tests.rs  security_domain_tests.rs  self_healing_tests.rs  service_tests.rs  state_machine_tests.rs  team_consensus.rs  validation_tests.rs  verification_pipeline_tests.rs  wave3_tests.rs  worker_prompt_tests.rs  worktree_tests.rs
crates/mahalaxmi-providers/: README.md
crates/mahalaxmi-pty/: README.md
domains/coding/: config.yaml  manager_capped.prompt  manager_uncapped.prompt  worker.prompt
domains/content/: config.yaml  manager.prompt  worker.prompt
domains/financial/: config.yaml  manager.prompt  worker.prompt
domains/legal/: config.yaml  manager.prompt  worker.prompt
examples/: Cargo.toml
examples/cli/: 01-connect-to-instance.rs
examples/core/: 01-config-loading.rs  02-logging-setup.rs
examples/detection/: 01-basic-detection.rs  02-custom-rules.rs
examples/indexing/: 01-parse-repository.rs  02-symbol-extraction.rs
examples/orchestration/: 01-dag-types.rs  02-worker-queue.rs
examples/providers/: 01-implement-provider.rs  02-claude-code-stub.rs  03-custom-cli-provider.rs
examples/pty/: 01-spawn-process.rs  02-stream-output.rs
examples/src/: lib.rs
scripts/: decrypt-secrets.sh  encrypt-secrets.sh
secrets/: .env.prod.enc  MANIFEST.md
website/: .env.example  .gitignore  next.config.js  package-lock.json  package.json
(+278 files in other folders)
